Add the workflow/complete container.
Use golang-project to build, skipping Dockerfiles.

--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,9 +1,12 @@
 steps:
 
 # Build the coord image.
-- name: 'gcr.io/cloud-builders/go:wheezy'
-  args: ['install', './coord']
-- name: 'gcr.io/cloud-builders/docker'
-  args: ['build', '--tag', 'gcr.io/$PROJECT_ID/coord', '-f', 'coord/Dockerfile', '.']
+- name: 'gcr.io/cloud-builders/golang-project:wheezy'
+  args: ['github.com/skelterjohn/flargo/coord', '--skip-tests', '--base-image=gcr.io/cloud-builders/gcloud', '--tag', 'gcr.io/$PROJECT_ID/coord']
+# Build the complete image.
+- name: 'gcr.io/cloud-builders/golang-project:wheezy'
+  args: ['github.com/skelterjohn/flargo/complete', '--skip-tests', '--base-image=gcr.io/cloud-builders/gcloud', '--tag', 'gcr.io/$PROJECT_ID/complete']
 
-images: ['gcr.io/$PROJECT_ID/coord']
+images:
+- 'gcr.io/$PROJECT_ID/coord'
+- 'gcr.io/$PROJECT_ID/complete'
