--- a/wait/wait_test.yaml
+++ b/wait/wait_test.yaml
@@ -1,3 +1,3 @@
 steps:
-- name: 'gcr.io/$PROJECT_ID/complete'
+- name: 'gcr.io/$PROJECT_ID/wait'
   args: ['$_GCS_PREFIX', '$_WORKFLOW_ID', 'complete']
