Move artifacts from one execution to the next, using GCS and volumes.

--- a/example/join.yaml
+++ b/example/join.yaml
@@ -4,4 +4,5 @@ steps:
   args:
   - '-c'
   - |
-    echo "Hello, everyone!"
+    echo "from my ancestors: $(cat /workflow_artifacts/in/left/left.txt)"
+    echo "from my ancestors: $(cat /workflow_artifacts/in/right/right.txt)"
