--- a/example/left.yaml
+++ b/example/left.yaml
@@ -4,5 +4,6 @@ steps:
   args:
   - '-c'
   - |
-    echo "Hello, left!"
+    echo "from my ancestor: $(cat /workflow_artifacts/in/start/start.txt)"
     sleep 1s
+    echo "here is something for my left descendants" > /workflow_artifacts/out/left.txt
